--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-            </dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
